--- a/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
@@ -24,6 +24,14 @@
         <th mat-header-cell *matHeaderCellDef>Юр. лицо</th>
         <td mat-cell *matCellDef="let client">{{client.legalEntity}}</td>
       </ng-container>
+      <ng-container matColumnDef="clientType">
+        <th mat-header-cell *matHeaderCellDef>Тип клиента</th>
+        <td mat-cell *matCellDef="let client">{{client.clientType | clientTypeTranslate: client.clientType}}</td>
+      </ng-container>
+      <ng-container matColumnDef="numberOfCalls">
+        <th mat-header-cell *matHeaderCellDef>Кол-во звонков</th>
+        <td mat-cell *matCellDef="let client">{{client.numberOfCalls}}</td>
+      </ng-container>
       <ng-container matColumnDef="phone">
         <th mat-header-cell *matHeaderCellDef>Телефон</th>
         <td mat-cell *matCellDef="let client">{{client.phone}}</td>
