--- a/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
@@ -26,11 +26,11 @@
       </ng-container>
       <ng-container matColumnDef="clientType">
         <th mat-header-cell *matHeaderCellDef>Тип клиента</th>
-        <td mat-cell *matCellDef="let client">{{client.clientType | clientTypeTranslate: client.clientType}}</td>
+        <td mat-cell *matCellDef="let client">{{client.clientType | clientTypeTranslate}}</td>
       </ng-container>
       <ng-container matColumnDef="numberOfCalls">
         <th mat-header-cell *matHeaderCellDef>Кол-во звонков</th>
-        <td mat-cell *matCellDef="let client">{{client.numberOfCalls}}</td>
+        <td mat-cell *matCellDef="let client">{{client.numberOfCalls | numberOfCallsTranslate}}</td>
       </ng-container>
       <ng-container matColumnDef="phone">
         <th mat-header-cell *matHeaderCellDef>Телефон</th>
