--- a/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.html
@@ -17,6 +17,14 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Юр. лицо </th>
       <td mat-cell *matCellDef="let client"> {{client.legalEntity}} </td>
     </ng-container>
+    <ng-container matColumnDef="clientType">
+      <th mat-header-cell *matHeaderCellDef>Тип клиента</th>
+      <td mat-cell *matCellDef="let client">{{client.clientType | clientTypeTranslate}}</td>
+    </ng-container>
+    <ng-container matColumnDef="numberOfCalls">
+      <th mat-header-cell *matHeaderCellDef>Кол-во звонков</th>
+      <td mat-cell *matCellDef="let client">{{client.numberOfCalls | numberOfCallsTranslate}}</td>
+    </ng-container>
      <ng-container matColumnDef="phone">
        <th mat-header-cell *matHeaderCellDef mat-sort-header> Телефон </th>
        <td mat-cell *matCellDef="let client"> {{client.phone}} </td>
