--- a/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
@@ -29,7 +29,7 @@
         <td mat-cell *matCellDef="let client">{{client.clientType | clientTypeTranslate}}</td>
       </ng-container>
       <ng-container matColumnDef="numberOfCalls">
-        <th mat-header-cell *matHeaderCellDef>Кол-во звонков</th>
+        <th mat-header-cell *matHeaderCellDef>Периодичность звонков</th>
         <td mat-cell *matCellDef="let client">{{client.numberOfCalls | numberOfCallsTranslate}}</td>
       </ng-container>
       <ng-container matColumnDef="phone">
@@ -47,6 +47,14 @@
           </ng-container>          
         </td>
       </ng-container> 
+      <ng-container matColumnDef="weekPlans">
+        <th mat-header-cell *matHeaderCellDef>Планы на неделю</th>
+        <td mat-cell *matCellDef="let client">
+          <ng-container>
+            <button mat-raised-button class="mat-primary table-button" (click)="weekPlansDetail(client.managers)">Просмотреть план</button>
+          </ng-container>                   
+        </td>
+      </ng-container>      
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Действие</th>
         <td mat-cell *matCellDef="let client">
