--- a/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
@@ -52,10 +52,10 @@
         </td>
       </ng-container> 
       <ng-container matColumnDef="plannedAmountTrips">
-        <th mat-header-cell *matHeaderCellDef> Командировки <br> Запланировано </th>
+        <th mat-header-cell *matHeaderCellDef> Командировки </th>
         <td mat-cell *matCellDef="let client">
           <ng-container *ngIf="client.plannedAmountTrips">
-            <button mat-raised-button class="mat-primary table-button" (click)="tripsPlanDetail(client.managers)"> {{client.plannedAmountTrips}} </button>
+            <button mat-raised-button class="mat-primary table-button" (click)="tripsPlanDetail(client.managers)"> Просмотр </button>
           </ng-container>
           <ng-container *ngIf="!client.plannedAmountTrips">
             <button mat-raised-button class="mat-primary table-button" (click)="tripsPlanDetail(client.managers)"> Не составлено </button>
