--- a/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.html
@@ -54,7 +54,15 @@
           <button mat-raised-button class="mat-primary table-button" (click)="openPlannedTrips(client.id, client.title)">Запланировать</button>  
         </ng-container>                 
       </td>
-   </ng-container>  
+     </ng-container>  
+     <ng-container matColumnDef="weekPlans">
+      <th mat-header-cell *matHeaderCellDef> Планы на неделю </th>
+      <td mat-cell *matCellDef="let client">
+        <ng-container >
+          <button mat-raised-button class="mat-primary table-button" (click)="openWeekPlan(client.id, client.title, client.weekPlans)">Просмотр</button>  
+        </ng-container>                 
+      </td>
+     </ng-container> 
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
    </table>
