--- a/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.html
@@ -4,68 +4,335 @@
     <mat-card-title>Список Клиентов</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-   <table mat-table matSort [dataSource]="dataSource">
-     <ng-container matColumnDef="id">
-       <th mat-header-cell *matHeaderCellDef> # </th>
-       <td mat-cell *matCellDef="let client"> {{client.id}} </td>
-     </ng-container>
-     <ng-container matColumnDef="title">
-       <th mat-header-cell *matHeaderCellDef mat-sort-header> Имя </th>
-       <td mat-cell *matCellDef="let client"> {{client.title}} </td>
-     </ng-container>
-     <ng-container matColumnDef="legalEntity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Юр. лицо </th>
-      <td mat-cell *matCellDef="let client"> {{client.legalEntity}} </td>
-    </ng-container>
-    <ng-container matColumnDef="clientType">
-      <th mat-header-cell *matHeaderCellDef>Тип клиента</th>
-      <td mat-cell *matCellDef="let client">{{client.clientType | clientTypeTranslate}}</td>
-    </ng-container>
-    <ng-container matColumnDef="numberOfCalls">
-      <th mat-header-cell *matHeaderCellDef>Кол-во звонков</th>
-      <td mat-cell *matCellDef="let client">{{client.numberOfCalls | numberOfCallsTranslate}}</td>
-    </ng-container>
-    <ng-container matColumnDef="numberOfShipments">
-      <th mat-header-cell *matHeaderCellDef>Кол-во отгрузок</th>
-      <td mat-cell *matCellDef="let client">{{client.numberOfShipments | numberOfShipmentsTranslate}}</td>
-    </ng-container>
-     <ng-container matColumnDef="phone">
-       <th mat-header-cell *matHeaderCellDef mat-sort-header> Телефон </th>
-       <td mat-cell *matCellDef="let client"> {{client.phone}} </td>
-     </ng-container>
-     <ng-container matColumnDef="plannedAmountCalls">
-        <th mat-header-cell *matHeaderCellDef> Звонки <br> Сделано | Запланировано </th>
-        <td mat-cell *matCellDef="let client">
-          <ng-container *ngIf="client.plannedAmountCalls">
-             <button mat-raised-button class="mat-primary table-button" (click)="callsOpen(client.id, client.title, client.calls)">{{client.amountCalls}} | {{client.plannedAmountCalls}}</button>
+  <div class="table-wrapper">
+      <table mat-table matSort [dataSource]="getTestClients()">
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+            <td mat-cell *matCellDef="let client"> {{client.id}} </td>
           </ng-container>
-          <ng-container *ngIf="!client.plannedAmountCalls">
-            <button mat-raised-button class="mat-primary table-button" (click)="callPlanningOpen(client.id, client.title)">Запланировать</button>  
-          </ng-container>                 
-        </td>
-     </ng-container>  
-     <ng-container matColumnDef="plannedAmountTrips">
-      <th mat-header-cell *matHeaderCellDef> Командировки <br> Сделано | Запланировано </th>
-      <td mat-cell *matCellDef="let client">
-        <ng-container *ngIf="client.plannedAmountTrips">
-           <button mat-raised-button class="mat-primary table-button" (click)="openTrips(client.id, client.title, client.plannedAmountTrips, client.businessTripCompletedType, client.businessTripPlanId)">{{client.businessTripCompletedType | businessTripCompleteTypeTranslate }} | {{client.plannedAmountTrips}}</button>
-        </ng-container>
-        <ng-container *ngIf="!client.plannedAmountTrips">
-          <button mat-raised-button class="mat-primary table-button" (click)="openPlannedTrips(client.id, client.title)">Запланировать</button>  
-        </ng-container>                 
-      </td>
-     </ng-container>  
-     <ng-container matColumnDef="weekPlans">
-      <th mat-header-cell *matHeaderCellDef> Планы на неделю </th>
-      <td mat-cell *matCellDef="let client">
-        <ng-container >
-          <button mat-raised-button class="mat-primary table-button" (click)="openWeekPlan(client.id, client.title, client.weekPlans)">Просмотр</button>  
-        </ng-container>                 
-      </td>
-     </ng-container> 
-     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-   </table>
+          <ng-container matColumnDef="title" sticky>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Имя </th>
+            <td mat-cell *matCellDef="let client"> {{client.title}} </td>
+          </ng-container>
+          <ng-container matColumnDef="legalEntity">
+           <th mat-header-cell *matHeaderCellDef mat-sort-header> Юр. лицо </th>
+           <td mat-cell *matCellDef="let client"> {{client.legalEntity}} </td>
+         </ng-container>
+         <ng-container matColumnDef="clientType">
+           <th mat-header-cell *matHeaderCellDef>Тип клиента</th>
+           <td mat-cell *matCellDef="let client">{{client.clientType | clientTypeTranslate}}</td>
+         </ng-container>
+         <ng-container matColumnDef="numberOfCalls">
+           <th mat-header-cell *matHeaderCellDef>Кол-во звонков</th>
+           <td mat-cell *matCellDef="let client">{{client.numberOfCalls | numberOfCallsTranslate}}</td>
+         </ng-container>
+         <ng-container matColumnDef="numberOfShipments">
+           <th mat-header-cell *matHeaderCellDef>Кол-во отгрузок</th>
+           <td mat-cell *matCellDef="let client">{{client.numberOfShipments | numberOfShipmentsTranslate}}</td>
+         </ng-container>
+          <ng-container matColumnDef="phone">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Телефон </th>
+            <td mat-cell *matCellDef="let client"> {{client.phone}} </td>
+          </ng-container>
+          <ng-container matColumnDef="plannedAmountCalls">
+             <th mat-header-cell *matHeaderCellDef> Звонки <br> Сделано | Запланировано </th>
+             <td mat-cell *matCellDef="let client">
+               <ng-container *ngIf="client.plannedAmountCalls">
+                  <button mat-raised-button class="mat-primary table-button" (click)="callsOpen(client.id, client.title, client.calls)">{{client.amountCalls}} | {{client.plannedAmountCalls}}</button>
+               </ng-container>
+               <ng-container *ngIf="!client.plannedAmountCalls">
+                 <button mat-raised-button class="mat-primary table-button" (click)="callPlanningOpen(client.id, client.title)">Запланировать</button>  
+               </ng-container>                 
+             </td>
+          </ng-container>  
+          <ng-container matColumnDef="plannedAmountTrips">
+           <th mat-header-cell *matHeaderCellDef> Командировки <br> Сделано | Запланировано </th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container *ngIf="client.plannedAmountTrips">
+                <button mat-raised-button class="mat-primary table-button" (click)="openTrips(client.id, client.title, client.plannedAmountTrips, client.businessTripCompletedType, client.businessTripPlanId)">{{client.businessTripCompletedType | businessTripCompleteTypeTranslate }} | {{client.plannedAmountTrips}}</button>
+             </ng-container>
+             <ng-container *ngIf="!client.plannedAmountTrips">
+               <button mat-raised-button class="mat-primary table-button" (click)="openPlannedTrips(client.id, client.title)">Запланировать</button>  
+             </ng-container>                 
+           </td>
+          </ng-container>  
+          <ng-container matColumnDef="weekPlans">
+           <th mat-header-cell *matHeaderCellDef> Планы на неделю </th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               <button mat-raised-button class="mat-primary table-button" (click)="openWeekPlan(client.id, client.title, client.weekPlans)">Просмотр</button>  
+             </ng-container>                 
+           </td>
+          </ng-container> 
+          <ng-container matColumnDef="day1">
+           <th mat-header-cell *matHeaderCellDef> 1 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day2">
+           <th mat-header-cell *matHeaderCellDef> 2 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day3">
+           <th mat-header-cell *matHeaderCellDef> 3 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day4">
+           <th mat-header-cell *matHeaderCellDef> 4 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day5">
+           <th mat-header-cell *matHeaderCellDef> 5 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day6">
+           <th mat-header-cell *matHeaderCellDef> 6 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day7">
+           <th mat-header-cell *matHeaderCellDef> 7 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day8">
+           <th mat-header-cell *matHeaderCellDef>8 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day9">
+           <th mat-header-cell *matHeaderCellDef> 9 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day10">
+           <th mat-header-cell *matHeaderCellDef> 10 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day11">
+           <th mat-header-cell *matHeaderCellDef> 11 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day12">
+           <th mat-header-cell *matHeaderCellDef> 12 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day13">
+           <th mat-header-cell *matHeaderCellDef> 13 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day14">
+           <th mat-header-cell *matHeaderCellDef> 14 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day15">
+           <th mat-header-cell *matHeaderCellDef> 15 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day16">
+           <th mat-header-cell *matHeaderCellDef> 16 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day17">
+           <th mat-header-cell *matHeaderCellDef> 17 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day18">
+           <th mat-header-cell *matHeaderCellDef> 18 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day19">
+           <th mat-header-cell *matHeaderCellDef> 19 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day20">
+           <th mat-header-cell *matHeaderCellDef> 20 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day21">
+           <th mat-header-cell *matHeaderCellDef> 21 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day22">
+           <th mat-header-cell *matHeaderCellDef> 22 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day23">
+           <th mat-header-cell *matHeaderCellDef> 23 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day24">
+           <th mat-header-cell *matHeaderCellDef> 24 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day25">
+           <th mat-header-cell *matHeaderCellDef> 25 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day26">
+           <th mat-header-cell *matHeaderCellDef> 26 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day27">
+           <th mat-header-cell *matHeaderCellDef> 27 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day28">
+           <th mat-header-cell *matHeaderCellDef> 28 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day29">
+           <th mat-header-cell *matHeaderCellDef> 29 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="day30">
+           <th mat-header-cell *matHeaderCellDef> 30 Мая <br> МС | РМ</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="resultMS">
+           <th mat-header-cell *matHeaderCellDef> Итог МС <br> звонки | WhatsApp | письма | Итог</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 | 3 | 6
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="resultRM">
+           <th mat-header-cell *matHeaderCellDef> Итог РМ <br> звонки | WhatsApp | письма | Итог</th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 2 | 3 | 6
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <ng-container matColumnDef="contractResult">
+           <th mat-header-cell *matHeaderCellDef> Доля выполнения плана по контактам <br> МС | РМ </th>
+           <td mat-cell *matCellDef="let client">
+             <ng-container >
+               1 | 1
+             </ng-container>                 
+           </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+  </div>
+   
    <mat-paginator [pageSizeOptions]="[10, 50, 100]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
