--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -30,7 +30,7 @@
 
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef>Название</th>
-          <td mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+          <td mat-cell *matCellDef="let element" style="max-width: 300px">{{element.title}} </td>
         </ng-container>
 
         <ng-container matColumnDef="phone">
