--- a/WebUI/ClientApp/src/app/admin/clients/dialogs/create-client-dialog/create-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/dialogs/create-client-dialog/create-client-dialog.component.html
@@ -1,4 +1,4 @@
-<h3 class="dialog-title" mat-dialog-title>Создание клиента</h3>
+<h3 class="dialog-title" mat-dialog-title>Создание карточку клиента</h3>
 <button class="close" (click)="close()"><i class="fas fa-times fa-2x"></i></button>
 
 
@@ -80,5 +80,4 @@
     <button color="primary" mat-raised-button (click)="save()">Сохранить</button>
     <button mat-raised-button (click)="close()">Закрыть</button>
   </div>
-  
   
