--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -1,155 +1,211 @@
-<mat-card class="mat-elevation-z1">
-  <mat-card-header>
-    <mat-card-title class="card-title">Главная</mat-card-title>
-  </mat-card-header>
-  <mat-card-content class="card-content-wrapper">
-    <div class="total-contacts">
-      <h3>Сегодня</h3>
-      <div class="contacts-info mat-elevation-z2">
-        {{setToDayCall()}}
-        <span>Звонков</span>
-      </div>
-    </div>
-    <div class="total-contacts">
-      <h3>Неделя</h3>
-      <div class="contacts-info mat-elevation-z2">
-        {{setToWeekCall()}}
-        <span>Звонков</span>
-      </div>
-    </div>
-    <div class="total-contacts">
-      <h3>Месяц</h3>
-      <div class="contacts-info mat-elevation-z2">
-        {{setToMonthkCall()}}
-        <span>Звонков</span>
-      </div>
-    </div>
-    <div class="total-contacts">
-      <h3>Всего</h3>
-      <div class="contacts-info mat-elevation-z2">
-        {{setAllCall()}}
-        <span>Звонков</span>
-      </div>
-    </div>
-  </mat-card-content>
-  <mat-card-content class="card-content-wrapper">
-    <div class="total-contacts">
-      <h3>более 2,5 минут</h3>
-      <div class="contacts-info mat-elevation-z2">
-        {{setMoreTwoFiveCall()}}
-        <span>Звонков</span>
-      </div>
-    </div>
-    <div class="total-contacts">
-      <h3>
-        менее 2,5 минут, но более 10 с
-      </h3>
-      <div class="contacts-info mat-elevation-z2">
-        {{setMore10to2_5Call()}}
-        <span>Звонков</span>
-      </div>
-    </div>
-    <div class="total-contacts">
-      <h3>
-        менее 10 с
-      </h3>
-      <div class="contacts-info mat-elevation-z2">
-        {{setLes10SecCall()}}
-        <span>Звонков</span>
-      </div>
-    </div>
-    <div class="total-contacts">
-      <h3>Коллегам и руководителю</h3>
-      <div class="contacts-info mat-elevation-z2">
-        {{0}}
-        <span>Звонков</span>
-      </div>
-    </div>
-  </mat-card-content>
-</mat-card>
-
-<hr style="opacity: 0.2">
 
 <div class="manager-effiency">
   <mat-card class="mat-elevation-z1">
     <mat-card-header>
-      <mat-card-title class="card-title">Таблица эффективности менеджера</mat-card-title>
+      <mat-card-title class="card-title">Главная</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
       <table>
         <thead>
           <tr>
             <th></th>
-            <th colspan="2">Типы контактов</th>
-            <th>План по числу смен</th>
-            <th>План в смену (шт)</th>
-            <th>Баллы за ед.</th>
-            <th colspan="2">Эталон</th>
-            <th colspan="4">Факт</th>
-          </tr>
-          <tr>
-            <th colspan="1"></th>
-            <th colspan="5"></th>
-            <th>в ед.</th>
-            <th>в баллах</th>
-            <th>согласно учету</th>
-            <th>согласно программе (звонки > 2,5 мин.)</th>
-            <th>расхождение</th>
-            <th>в баллах</th>
-          </tr>
-          <tr>
-            <th style="text-align: left" colspan="12">Менеджер Сопровождения</th>
+            <th>Сегодня</th>
+            <th>Неделя</th>
+            <th>Месяц</th>
+            <th>Всего</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>{{(getEscortManagerCallContactsAmount() / contactsStandard * 100).toFixed(1)}}%</td>
-            <td colspan="2">Звонки развития</td>
-            <td>20</td>
-            <td>8</td>
-            <td>0.4</td>
-            <td>{{contactsStandard}}</td>
-            <td>64</td>
-            <td>0</td>
-            <td>{{getEscortManagerCallContactsAmount()}}</td>
-            <td>0</td>
-            <td>0</td>
+            <td>Все звонки</td>
+            <td>{{setToDayCall()}}</td>
+            <td>{{setToWeekCall()}}</td>
+            <td>{{setToMonthkCall()}}</td>
+            <td>{{setAllCall()}}</td>
           </tr>
           <tr>
-            <th colspan="12">Региональный менеджер</th>
+            <td>более 2,5 мин</td>
+            <td>{{setMoreTwoFiveCallDays()}}</td>
+            <td>{{setMoreTwoFiveCallWeek()}}</td>
+            <td>{{setMoreTwoFiveCallMonth()}}</td>
+            <td>{{setMoreTwoFiveCall()}}</td>
           </tr>
           <tr>
-            <td rowspan="3">{{(getRegionalManagerCallContactsAmount() / (contactsStandard + 16) * 100).toFixed(1)}}%</td>
-            <td colspan="2">Встречи и командировки развития</td>
-            <td>10</td>
-            <td></td>
-            <td>8</td>
-            <td></td>
-            <td rowspan="3">80</td>
+            <td>Менее 2.5 мин, более 10 сек</td>
+            <td>{{setMore10to2_5CallDays()}}</td>
+            <td>{{setMore10to2_5CallWeek()}}</td>
+            <td>{{setMore10to2_5CallMonth()}}</td>
+            <td>{{setMore10to2_5Call()}}</td>
+          </tr>
+          <tr>
+            <td>мение 10 сек</td>
+            <td>{{setLes10SecCallDays()}}</td>
+            <td>{{setLes10SecCallWeek()}}</td>
+            <td>{{setLes10SecCallMonth()}}</td>
+            <td>{{setLes10SecCall()}}</td>
+          </tr>
+          <tr>
+            <td>Звонки развития</td>
+            <td>{{setDevelopmentCallDays()}}</td>
+            <td>{{setDevelopmentCallWeek()}}</td>
+            <td>{{setDevelopmentCallMonth()}}</td>
+            <td>{{setDevelopmentCall()}}</td>
+          </tr>
+          <tr>
+            <td>Звонки колегам</td>
             <td>0</td>
-            <td>-</td>
-            <td>-</td>
-            <td rowspan="3">0</td>
-          </tr>
-          <tr>
-            <td rowspan="2">Звонки</td>
-            <td>Свои смены</td>
-            <td>8</td>
-            <td>20</td>
-            <td rowspan="2">0.4</td>
-            <td>{{contactsStandard}}</td>
-            <td rowspan="2">0</td>
-            <td rowspan="2">{{getRegionalManagerCallContactsAmount()}}</td>
-            <td rowspan="2">0</td>
-          </tr>
-          <tr>
-            <td>Смены замещения</td>
-            <td>2</td>
-            <td>8</td>
-            <td>16</td>
+            <td>0</td>
+            <td>0</td>
+            <td>0</td>
           </tr>
         </tbody>
       </table>
-    </mat-card-content>
+
+      <!--<div class="total-contacts">
+          <h3>Сегодня</h3>
+          <div class="contacts-info mat-elevation-z2">
+            {{setToDayCall()}}
+            <span>Звонков</span>
+          </div>
+        </div>
+        <div class="total-contacts">
+          <h3>Неделя</h3>
+          <div class="contacts-info mat-elevation-z2">
+            {{setToWeekCall()}}
+            <span>Звонков</span>
+          </div>
+        </div>
+        <div class="total-contacts">
+          <h3>Месяц</h3>
+          <div class="contacts-info mat-elevation-z2">
+            {{setToMonthkCall()}}
+            <span>Звонков</span>
+          </div>
+        </div>
+        <div class="total-contacts">
+          <h3>Всего</h3>
+          <div class="contacts-info mat-elevation-z2">
+            {{setAllCall()}}
+            <span>Звонков</span>
+          </div>
+        </div>
+      </mat-card-content>
+      <mat-card-content class="card-content-wrapper">
+        <div class="total-contacts">
+          <h3>более 2,5 минут</h3>
+          <div class="contacts-info mat-elevation-z2">
+            {{setMoreTwoFiveCall()}}
+            <span>Звонков</span>
+          </div>
+        </div>
+        <div class="total-contacts">
+          <h3>
+            менее 2,5 минут, но более 10 с
+          </h3>
+          <div class="contacts-info mat-elevation-z2">
+            {{setMore10to2_5Call()}}
+            <span>Звонков</span>
+          </div>
+        </div>
+        <div class="total-contacts">
+          <h3>
+            менее 10 с
+          </h3>
+          <div class="contacts-info mat-elevation-z2">
+            {{setLes10SecCall()}}
+            <span>Звонков</span>
+          </div>
+        </div>
+        <div class="total-contacts">
+          <h3>Коллегам и руководителю</h3>
+          <div class="contacts-info mat-elevation-z2">
+            {{0}}
+            <span>Звонков</span>
+          </div>
+        </div>-->
   </mat-card>
 </div>
+  <hr style="opacity: 0.2">
+
+  <div class="manager-effiency">
+    <mat-card class="mat-elevation-z1">
+      <mat-card-header>
+        <mat-card-title class="card-title">Таблица эффективности менеджера</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <table>
+          <thead>
+            <tr>
+              <th></th>
+              <th colspan="2">Типы контактов</th>
+              <th>План по числу смен</th>
+              <th>План в смену (шт)</th>
+              <th>Баллы за ед.</th>
+              <th colspan="2">Эталон</th>
+              <th colspan="4">Факт</th>
+            </tr>
+            <tr>
+              <th colspan="1"></th>
+              <th colspan="5"></th>
+              <th>в ед.</th>
+              <th>в баллах</th>
+              <th>согласно учету</th>
+              <th>согласно программе (звонки > 2,5 мин.)</th>
+              <th>расхождение</th>
+              <th>в баллах</th>
+            </tr>
+            <tr>
+              <th style="text-align: left" colspan="12">Менеджер Сопровождения</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>{{(getEscortManagerCallContactsAmount() / contactsStandard * 100).toFixed(1)}}%</td>
+              <td colspan="2">Звонки развития</td>
+              <td>20</td>
+              <td>8</td>
+              <td>0.4</td>
+              <td>{{contactsStandard}}</td>
+              <td>64</td>
+              <td>0</td>
+              <td>{{getEscortManagerCallContactsAmount()}}</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <th colspan="12">Региональный менеджер</th>
+            </tr>
+            <tr>
+              <td rowspan="3">{{(getRegionalManagerCallContactsAmount() / (contactsStandard + 16) * 100).toFixed(1)}}%</td>
+              <td colspan="2">Встречи и командировки развития</td>
+              <td>10</td>
+              <td></td>
+              <td>8</td>
+              <td></td>
+              <td rowspan="3">80</td>
+              <td>0</td>
+              <td>-</td>
+              <td>-</td>
+              <td rowspan="3">0</td>
+            </tr>
+            <tr>
+              <td rowspan="2">Звонки</td>
+              <td>Свои смены</td>
+              <td>8</td>
+              <td>20</td>
+              <td rowspan="2">0.4</td>
+              <td>{{contactsStandard}}</td>
+              <td rowspan="2">0</td>
+              <td rowspan="2">{{getRegionalManagerCallContactsAmount()}}</td>
+              <td rowspan="2">0</td>
+            </tr>
+            <tr>
+              <td>Смены замещения</td>
+              <td>2</td>
+              <td>8</td>
+              <td>16</td>
+            </tr>
+          </tbody>
+        </table>
+      </mat-card-content>
+    </mat-card>
+  </div>
